# elytra-gliding-calculator

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: dynamic_angle.cpp  implementation.cpp  infinite_flight.cpp  main.cpp  static_angle.cpp  two_angles.cpp
